--- a/templates/admin/homeads.html
+++ b/templates/admin/homeads.html
@@ -5,82 +5,84 @@
 
 {% block body %}
 
-         <!-- Right Side Content Start -->
-         <section id="content" class="seipkon-content-wrapper">
-            <div class="page-content">
-               <div class="container-fluid">
-                  <!-- message framework -->
-                  {% if messages %}
-                   <div class="messages">
-                       {% for message in messages %}
-                       <div style="color:#f00; text-align:center, font-size:20px" {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</div>
-                       {% endfor %}
-                   </div>
-                 {% endif %}
-                 <!-- end message framework -->
-
-                  <!-- Add Product Category Start -->
-                  <div class="row">
-                     <div class="col-md-6 col-md-offset-3">
-                        <div class="page-box">
-                          <form method="POST" data-parsley-validate >
-                              {% csrf_token %}
-                            <div class="form-group">
-                               <label class="control-label">Ads title</label>
-                               {{ ads_form.title }}
-                            </div>
-                            <div class="form-group">
-                               <label class="control-label">Ads sub-title</label>
-                               {{ ads_form.subTitle }}
-                            </div>
-                            <div class="form-group">
-                               <label class="control-label">Ads image URL</label>
-                               {{ ads_form.image }}
-                            </div>
-                            <div class="form-layout-submit">
-                               <button type="submit" class="btn btn-info" >save</button>
-                            </div>
-                          </form>
-                        </div>
-                     </div>
-                  </div>
-                  <!-- End Add Product Category -->
-
-
-                  <div class="row">
-                    <div class="col-md-12">
-                      <div class="page-box">
-                        <div class="page-box">
-                           <table id="invoice-list" class="table display table-hover">
-                             <thead>
-                                <tr>
-                                   <th>Sl</th>
-                                   <th>Ads Title</th>
-                                   <th>Imae</th>
-                                   <th>Delete</th>
-                                   <th>Date</th>
-                                </tr>
-                             </thead>
-                             {% if ads_obj %}
-                             {% for obj in ads_obj %}
-                             <tbody>
-                               <th>#{{obj.id}}</th>
-                               <th>{{obj.title}}</th>
-                               <th><img src="{{ obj.image }}" width="80px" height="120px"/></th>
-                               <th><a class="btn btn-danger" href="{% url 'deletelHomepageAdsView' obj.id %}">Delete</a></th>
-                               <th>{{obj.create_at}}</th>
-                             </tbody>
-                             {% endfor %}
-                             {% endif %}
-                          </table>
-                        </div>
-                      </div>
+    <!-- Right Side Content Start -->
+    <section id="content" class="seipkon-content-wrapper">
+        <div class="page-content">
+            <div class="container-fluid">
+                <!-- message framework -->
+                {% if messages %}
+                    <div class="messages">
+                        {% for message in messages %}
+                            <div style="color:#f00; text-align:center, font-size:20px" {% if message.tags %}
+                                 class="{{ message.tags }}"{% endif %}>{{ message }}</div>
+                        {% endfor %}
                     </div>
-                  </div>
+                {% endif %}
+                <!-- end message framework -->
+
+                <!-- Add Product Category Start -->
+                <div class="row">
+                    <div class="col-md-6 col-md-offset-3">
+                        <div class="page-box">
+                            <form method="POST" data-parsley-validate>
+                                {% csrf_token %}
+                                <div class="form-group">
+                                    <label class="control-label">Ads title</label>
+                                    {{ ads_form.title }}
+                                </div>
+                                <div class="form-group">
+                                    <label class="control-label">Ads sub-title</label>
+                                    {{ ads_form.subTitle }}
+                                </div>
+                                <div class="form-group">
+                                    <label class="control-label">Ads image URL</label>
+                                    {{ ads_form.image }}
+                                </div>
+                                <div class="form-layout-submit">
+                                    <button type="submit" class="btn btn-info">save</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <!-- End Add Product Category -->
 
 
-               </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="page-box">
+                            <div class="page-box">
+                                <table id="invoice-list" class="table display table-hover">
+                                    <thead>
+                                    <tr>
+                                        <th>Sl</th>
+                                        <th>Ads Title</th>
+                                        <th>Imae</th>
+                                        <th>Delete</th>
+                                        <th>Date</th>
+                                    </tr>
+                                    </thead>
+                                    {% if ads_obj %}
+                                        {% for obj in ads_obj %}
+                                            <tbody>
+                                            <th>#{{ obj.id }}</th>
+                                            <th>{{ obj.title }}</th>
+                                            <th><img src="{{ obj.image }}" width="80px" height="120px"/></th>
+                                            <th><a class="btn btn-danger"
+                                                   href="{% url 'deletelHomepageAdsView' obj.id %}">Delete</a></th>
+                                            <th>{{ obj.create_at }}</th>
+                                            </tbody>
+                                        {% endfor %}
+                                    {% endif %}
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
-         </section>
-         <!-- End Right Side Content -->
+        </div>
+    </section>
+    <!-- End Right Side Content -->
 {% endblock %}
